created some logic

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,69 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+.board {
+	display: inline-block;
+	background-color: rgb(224,224,224);
+	height: 50%;
+	width: 	50%;
+}
+
+.card {
+
+	height: 200px;
+	width: 	150px;
+	border: 1px solid rgb(0,0,0);
+	background-color: rgb(224,204,17);
+	border-radius: 10px;
+	float: left;
+	margin: 8%;
+}
+
+h1 {
+	color: rgb(2,132,130);
+}
+
+h2 {
+	color: #ffd700;
+}
+
+.class-for-my-name {
+	color: #ff0000;
+}
+
+body {
+	/*text-align: center;*/
+	/*This centers the boards and cards
+	which the screen shot clearly shows
+	that this should not be the case*/
+}
+
+h1, h2, h3, p, footer {
+	text-align: center;
+}
+
+nav {
+	background-color: #808080;
+}
+
+nav a {
+	background-color: #ffbf00;
+	color: #ffffff;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+
+a:hover {
+	background-color: #ee5f3c
+}
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	content: " ";
+	clear: both;
+	height: 0;
+	font-size: 0;
+}
+
+footer {
+	background-color: #808080;
+}
